WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102188
[EFL][WK2][AC] Print out warning if we fallback back to software mode
https://bugs.webkit.org/show_bug.cgi?id=102188
Summary
[EFL][WK2][AC] Print out warning if we fallback back to software mode
Chris Dumez
Reported
2012-11-14 00:34:29 PST
Currently, our implementation silently falls back to software mode if the Evas_Gl cannot be created. We should at least print a warning to notify the developer.
Attachments
Patch
(1.50 KB, patch)
2012-11-14 00:36 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-11-14 00:36:58 PST
Created
attachment 174093
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-11-14 03:18:43 PST
Comment on
attachment 174093
[details]
Patch Good idea
WebKit Review Bot
Comment 3
2012-11-14 03:25:25 PST
Comment on
attachment 174093
[details]
Patch Clearing flags on attachment: 174093 Committed
r134590
: <
http://trac.webkit.org/changeset/134590
>
WebKit Review Bot
Comment 4
2012-11-14 03:25:30 PST
All reviewed patches have been landed. Closing bug.
Yael
Comment 5
2012-11-14 05:15:09 PST
I didn't add this because Evas already gives such a warning :) Starting /home/yael/webkit/ws1/ACEflWebKitBuild/Debug/bin/MiniBrowser... CRI<11798>:elementary elm_win.c:2445 elm_win_add() OpenGL engine creation failed. Trying default. CRI<11798>:elementary elm_win.c:2449 elm_win_add() Software X11Fallback to Software X11 successful. ERR<11798>:evas_main evas_gl.c:42 evas_gl_new() Evas GL engine not available.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug