[EFL][WK2][AC] Print out warning if we fallback back to software mode https://bugs.webkit.org/show_bug.cgi?id=102188

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-11-14
Reviewed by Kenneth Rohde Christiansen.

Print out a warning if accelerated compositing is enabled but the
implementation is falling back to software mode for some reason.

* UIProcess/API/efl/EwkViewImpl.cpp:
(EwkViewImpl::createGLSurface):

Canonical link: https://commits.webkit.org/120315@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134590 268f45cc-cd09-0410-ab3c-d52691b4dbfc